registration heading added

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     </header>
     <main>
         <section id="event-details">
-            
-            <p>Date: 10th March 2023</p>
-            <p>Time: </p>
+            <h1>College Internship Event</h1>
+             <p>Date: 10th March 2023</p>
+            <p>Time: 10:00 AM</p>
             <p>Venue: College Auditorium</p>
         </section>
         <section id="registration">
-            
+            <h1>Registration</h1>
             <p>Register now to participate in the event!</p>
             <form>
                 <input type="text" placeholder="Name">
