contact heading added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </form>
         </section>
         <section id="contact">
-            
+            <h1>contact</h1>
             <p>Phone: 1234567890</p>
             <p>Email: <a href="mailto:info@college.edu">info@college.edu</a></p>
         </section>
