--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1>College Internship Event</h1>
              <p>Date: 10th March 2023</p>
             <p>Time: 10:00 AM</p>
-            <p>Venue: College Auditorium</p>
+            <p>Venue: college Auditorium</p>
         </section>
         <section id="registration">
             <h1>Registration</h1>
